--- a/Autenticacion/Modulos/Login/templates/correo_enviado.html
+++ b/Autenticacion/Modulos/Login/templates/correo_enviado.html
@@ -12,7 +12,7 @@
       <!-- Cuerpo del mensaje -->
       <tr>
         <td style="padding: 30px; text-align: center; color: #333333;">
-          <h2 style="font-size: 22px; color: #333333;">Hola, {{ user.username }}.</h2>
+          <h2 style="font-size: 22px; color: #333333;">Hola, {{ nombre }}.</h2>
           <p style="font-size: 16px; line-height: 1.6; color: #555555; margin: 20px 0;">
             Has solicitado restablecer tu contraseña. Haz clic en el siguiente botón para cambiarla:
           </p>
