--- a/Autenticacion/Modulos/Login/templates/cambiar_clave_primera_sesion.html
+++ b/Autenticacion/Modulos/Login/templates/cambiar_clave_primera_sesion.html
@@ -12,7 +12,11 @@ Cambiar Clave
 <div class="container-change-pass">
     
     <div class="container-grid">
-        
+        {% if request.user.primera_sesion == False %}
+        <div class="enlace">
+            <a href="{% url 'login:index' %}" class="btn-pass">Menú Principal</a>
+        </div>
+        {% endif %}
         <div class="validacion form">
                  
             <h3> La contraseña nueva debe cumplir con los siguientes parámetros:</h3>
