--- a/Autenticacion/static/css/diseño_auth.css
+++ b/Autenticacion/static/css/diseño_auth.css
@@ -1,15 +1,13 @@
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 body{
     font-family: 'Arima', sans-serif;
-	
+    
 }
-
-
 
 .wave {
 	position: fixed;
@@ -33,10 +31,6 @@ body{
     align-items: center;
     height: 100vh;
 }
-
-
-
-
 
 
 .container-grid {
@@ -64,7 +58,10 @@ body{
 }
 
 
-
+.enlace {
+    display: flex;
+    align-items: center;
+}
 .enlace .btn-pass {
     display: inline-block; /* Solo ocupa el espacio del texto */
     padding: 10px 20px; /* Espaciado interno */
@@ -75,8 +72,6 @@ body{
 	border: none;
 	background-image: linear-gradient(to right, #314258, #425b70, rgb(34, 38, 46));	
     background-size: 200%;
-	margin: 1rem 0;
-    height: 50px;
 	cursor: pointer;
 	transition: .5s;
 }
@@ -289,9 +284,12 @@ form{
 }
 
 
+.align-r {
+    text-align: right;
+}
+
 a{
-	display: block;
-	text-align: right;
+	display: inline;
 	text-decoration: none;
 	color: #797878;
     margin-top: 10px;
