--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -56,7 +56,7 @@
             </li>
             <li>
                 <a class="nav-link active" href="{% url 'calendario:listado_calendario' %}">
-                    <i class="fa-solid fa-calendar"></i>
+                    <i class="fa-sharp fa-solid fa-calendar-days"></i>
                     <span class="nav-item"> Periodo </span>
                 </a>
             </li>
@@ -68,7 +68,7 @@
             </li>
             <li>
                 <a class="nav-link active" href="{% url 'auditoria:listar_auditoria' %}">
-                    <i class="fa-solid fa-calendar"></i>
+                    <i class="fa-sharp fa-solid fa-folder"></i>
                     <span class="nav-item"> Auditoría </span>
                 </a>
             </li>
