--- a/Autenticacion/static/css/style.css
+++ b/Autenticacion/static/css/style.css
@@ -9,9 +9,7 @@
     --arrow-hover-color: #12171e;
     --transition-speed: 0.5s;
 }
-.collapse {
-    transition: height 0.4s ease-out; /* Control de expansión */
-}
+
 .modal {
     --bs-modal-width: 600px !important; /* Cambia el ancho del modal */
     --bs-modal-bg: #f8f9fa !important; /* Cambia el fondo del modal */
@@ -120,11 +118,11 @@
 
 @media (max-width: 875px) {
     .side-bar {
-        position: fixed;
-        z-index: 1000;
+        display: none;
     }
     .main-content{
         width: 100%;
+        margin:70px;
     }
 }
 
