--- a/Autenticacion/static/css/style_tabla.css
+++ b/Autenticacion/static/css/style_tabla.css
@@ -7,7 +7,15 @@
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
+.table-container .table {
+    border-radius: 10px;
+    overflow: hidden; /* Para evitar que el contenido se salga de los bordes redondeados */
+}
 
+.table-container h5 {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
 
 
 .table td, .table th {
