--- a/Autenticacion/templates/navbar.html
+++ b/Autenticacion/templates/navbar.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <!-- Logo -->
         <a href="/" class="navbar-brand">
-            <img src=""  class="p-1 mx-4" width="150px">
+            <img src="{% static 'img/inci_manager.png' %}"  class="mx-4" width="50px">
         </a>
 
         <!-- Botón para colapsar el menú en pantallas móviles -->
