--- a/Autenticacion/Modulos/Auditoria/templates/listar_auditoria.html
+++ b/Autenticacion/Modulos/Auditoria/templates/listar_auditoria.html
@@ -9,13 +9,20 @@ Modulo Auditoría
 {% endblock %}
 
 {% block search %}
-<form action="{{ dir_search }}" method="GET">
+<form method="GET" action="{{ dir_search }}" class="mb-3">
     <div class="input-group">
-        <input type="text" name="query" value="{{ query }}" placeholder="Filtra por Tabla o Acción"
-            aria-describedby="basic-addon2" />
-        <button type="submit" class="btn btn-primary mr-1" id="idSearchSp">Buscar</button>
+        <select name="query" class="form-select">
+            <option value="">-- Filtrar por Acción --</option>
+            {% for key, value in acciones %}
+            <option value="{{ key }}" {% if query == key %}selected{% endif %}>
+                {{ value }}
+            </option>
+            {% endfor %}
+        </select>
+        <button type="submit" class="btn btn-primary">Filtrar</button>
     </div>
 </form>
+
 {% endblock %}
 
 {% block thead %}
