--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -189,7 +189,7 @@
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <script src="{% static 'js/side_bar.js' %}"></script>
-    <!-- <script src="{% static 'js/modal.js' %}"></script> -->
+    <script src="{% static 'js/modal.js' %}"></script>
 
     {% block js %}
 
