--- a/Autenticacion/Modulos/Coordinador/Ubicacion/templates/registrar_ubicacion.html
+++ b/Autenticacion/Modulos/Coordinador/Ubicacion/templates/registrar_ubicacion.html
@@ -9,7 +9,7 @@
 
 {% block controls %}
 <div class="form-grid form-grid-map">
-    <div id="map"></div>
+    <div class="mx-auto" id="map"></div>
     <div>
         <div class="input-div one">
             <div class="i">
