--- a/Autenticacion/templates/form.html
+++ b/Autenticacion/templates/form.html
@@ -10,58 +10,45 @@
 
 
 {% block forms %}
-<form class="container text-dark" method="POST" action="{{ action_save }}" enctype="multipart/form-data"
-    name="registro" style="display: flex; justify-content: center; align-items: center;">
+<form class="container text-dark d-flex" method="POST" action="{{ action_save }}" enctype="multipart/form-data"
+    name="registro">
     {% csrf_token %}
-
-    <div class="modal-dialog mod modal-lg"  role="document" >
-    <div class="modal-content"  style="border: 10px solid #12171e; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 51, 102, 0.2); padding: 30px;">
-            <div class="modal-header bg-dark" style="padding: 5px; border-radius: 10px; display: flex; align-items: center;">
-                <h2 class="title text-center text-white">
-                    {{ titulo }}
-                </h2>
+    <div class="modal-dialog modal-lg my-auto" role="document">
+        <div class="modal-content shadow my-auto mx-auto rounded-3"> <!-- Clase aplicada aquí -->
+            <div class="modal-header bg-dark text-white">
+                <h2 class="modal-title text-center w-100">{{ titulo }}</h2>
             </div>
-            <div class="modal-body">
-                
-                <div class="container-regist">
-                    {% if messages %}
-                        <div class="error-message">
-                            {% for message in messages %}
-                                {{ message }} 
-                            {% endfor %}
-                        </div>
-                    {% endif %}
-                    {% if form.errors %}
-                        <div class="error-message">
-                            {% for field in form %}
-                                {% for error in field.errors %}
-                                    {{ error }} <br>
-                                {% endfor %}
-                            {% endfor %}
-                        </div>
-                    {% endif %}
-                    <div class="regist-content">
-                        {% block controls %}
-
-
-                        {% endblock %}
-                    </div>
+            <div class="modal-body m-4">
+                {% if messages %}
+                <div class="alert alert-danger">
+                    {% for message in messages %}
+                    <p>{{ message }}</p>
+                    {% endfor %}
                 </div>
+                {% endif %}
 
-                <div class="div-btn">
-
-                    <button type="submit" class="btn align-items-center ">
-                        Guardar registro
-                    </button>
-                    <a href="{{cancelar}}" class="btn nav-link text-center align-items-center">
-                        Cancelar
-                    </a>
+                {% if form.errors %}
+                <div class="alert alert-danger">
+                    {% for field in form %}
+                    {% for error in field.errors %}
+                    <p>{{ error }}</p>
+                    {% endfor %}
+                    {% endfor %}
                 </div>
+                {% endif %}
+
+                <div class="regist-content">
+                    {% block controls %}
+                    <!-- Aquí los campos del formulario -->
+                    {% endblock %}
+                </div>
+            </div>
+            <div class="div-btn">
+                <button type="submit" class="btn align-items-center">Guardar registro</button>
+                <a href="{{ cancelar }}" class="btn nav-link text-center align-items-center">Cancelar</a>
             </div>
         </div>
     </div>
-
-
 </form>
 {% endblock %}
 
